# WealthCompass

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
docs/: docker.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs  security.rs
src/data/: demo.ts
src/domain/: calculations.test.ts  calculations.ts  types.ts
src/excel/: workbook.ts
src/security/: api.ts  session.ts
