[package]
name = "wealth-compass"
version = "0.2.1"
description = "Privacy-first local wealth dashboard"
authors = ["Wealth Compass"]
edition = "2021"

[lib]
name = "wealth_compass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
